force-app/main/default/objects/xDO_TTHAIR_Einstein_Replies__c/xDO_TTHAIR_Einstein_Replies__c.object-meta.xml
<CustomObject>
    <label>TTH Einstein Replies</label>
    <nameField>
        <label>TTH Einstein Replies Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TTH Einstein Replies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>