force-app/main/default/objects/xDO_TTHAIR_Einstein_Replies__c/fields/xDO_TTHAIR_Identifier__c.field-meta.xml
<CustomField>
    <fullName>xDO_TTHAIR_Identifier__c</fullName>
    <displayFormat>message{0}</displayFormat>
    <label>Identifier</label>
    <type>AutoNumber</type>
</CustomField>