force-app/main/default/objects/xDO_TTHAIR_Einstein_Replies__c/fields/xDO_TTHAIR_Response_Message__c.field-meta.xml
<CustomField>
    <fullName>xDO_TTHAIR_Response_Message__c</fullName>
    <label>Response Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>