force-app/main/default/objects/xDO_TTHAIR_Einstein_Replies__c/fields/xDO_TTHAIR_Source__c.field-meta.xml
<CustomField>
    <fullName>xDO_TTHAIR_Source__c</fullName>
    <label>Message Source</label>
    <type>TextArea</type>
</CustomField>